# RSDKv3-Decompilation

./: .gitignore  .gitmodules  Android.mk  CMakeLists.txt  FAQ.md  LICENSE.md  Makefile  Makefile.3ds  Makefile.emscripten  Makefile.msys2  README.md  RSDKv3.sln  RSDKv3SDL1.sln  RSDKv3UWP.sln  SonicCDDecomp.sln  SonicCDDecompUWP.sln  SonicCDDecomp_SDL1.sln  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
RSDKv3/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.hpp  Ini.cpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  Player.cpp  Player.hpp  RSDKv3-sdl1.vcxproj  RSDKv3-sdl2.vcxproj  RSDKv3-sdl2.vcxproj.filters  RSDKv3.rc  RSDKv3.vcxproj  RSDKv3.vcxproj.filters  RSDKv3SDL1.vcxproj  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp  Scene.cpp  Scene.hpp  Scene3D.cpp  Scene3D.hpp  Script.cpp  Script.hpp  (+11 more)
RSDKv3 ios.xcodeproj/: project.pbxproj
RSDKv3 ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RSDKv3 ios.xcodeproj/xcshareddata/xcschemes/: RSDKv3.xcscheme
RSDKv3.vita/: CMakeLists.txt  build-internal.sh  build.sh
RSDKv3.xcodeproj/: project.pbxproj
RSDKv3.xcodeproj/xcshareddata/xcschemes/: RSDKv3.xcscheme
RSDKv3UWP/: Package.appxmanifest  RSDKv3UWP.vcxproj  RSDKv3UWP.vcxproj.filters  WinRTIncludes.hpp
Sonic CD ios.xcodeproj/: project.pbxproj
Sonic CD ios.xcodeproj/project.xcworkspace/xcuserdata/rubberduckycooly.xcuserdatad/: WorkspaceSettings.xcsettings
Sonic CD ios.xcodeproj/xcshareddata/xcschemes/: Sonic CD ios.xcscheme
Sonic CD.xcodeproj/: project.pbxproj
Sonic CD.xcodeproj/xcshareddata/xcschemes/: Sonic CD.xcscheme
SonicCD.Vita/: CMakeLists.txt  build-internal.sh  build.sh
SonicCDDecomp/: 3ds_debug.cpp  3ds_debug.hpp  Animation.cpp  Animation.h  Animation.hpp  Audio.cpp  Audio.h  Audio.hpp  Collision.cpp  Collision.h  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.h  Drawing.hpp  Drawing3D.h  Ini.cpp  Ini.hpp  Input.cpp  Input.h  Input.hpp  Math.cpp  Math.h  Object.cpp  Object.h  Object.hpp  Palette.cpp  Palette.h  Palette.hpp  Player.cpp  Player.h  Player.hpp  Reader.cpp  Reader.h  Reader.hpp  RetroEngine.cpp  RetroEngine.h  RetroEngine.hpp  Scene.cpp  Scene.h  (+24 more)
SonicCDDecomp/3ds/: 3ds_audio.cpp  3ds_audio.hpp  debug_3ds.cpp  debug_3ds.hpp  render_3ds.cpp  render_3ds.hpp
SonicCDDecompUWP/: Package.appxmanifest  SonicCDDecompUWP.vcxproj  SonicCDDecompUWP.vcxproj.filters  main.cpp
android/: build.gradle
android/app/: build.gradle
android/app/jni/: Application.mk  CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/decomp/cdr/: RSDKv3.java
android/app/src/main/java/com/decomp/rsdkv3/: RSDKv3.java
android/app/src/main/res/values/: strings.xml
dependencies/all/: dependencies.txt
dependencies/all/theoraplay/: 3ds_utils.h  pthread3ds.h  theoraplay.c
dependencies/android/: README.md  config_types.h  dependencies.txt
dependencies/android/libogg/include/ogg/: config_types.h
dependencies/ios/: dependencies.txt
dependencies/mac/: Info.plist  README.md  cocoaHelpers.hpp  cocoaHelpers.mm  dependencies.txt
dependencies/mac/Assets.xcassets/AppIcon.appiconset/: Contents.json
dependencies/mac/Dependencies.xcodeproj/: project.pbxproj
dependencies/mac/Dependencies.xcodeproj/xcshareddata/xcschemes/: Ogg.xcscheme  Theora.xcscheme  Vorbis.xcscheme
dependencies/web/: dependencies.txt
dependencies/wii-u/ppc-libtheora/: PKGBUILD
dependencies/win-uwp/: dependencies.txt
dependencies/windows/: dependencies.txt
dependencies/windows/ValveFileVDF/: vdf_parser.hpp
flatpak/: README.md  com.sega.SonicCD.appdata.xml  com.sega.SonicCD.desktop  com.sega.SonicCDAndroid.json  com.sega.SonicCDOrigins.json  com.sega.SonicCDSteam.json  run.sh
props/: winactions.props  winactions_HW.props  winactions_x64.props  winactions_x64_HW.props
resources/: SonicCD.rsf
