project('RSDKv3', ['c', 'cpp'], default_options: [
    'c_std=c17',
    'cpp_std=c++17',
    'optimization=2',
    'prefer_static=true',
])

executable(
    'RSDKv3',
    files(
        'dependencies/all/tinyxml2/tinyxml2.cpp',
        'dependencies/all/theoraplay/theoraplay.c',
        'RSDKv3/Animation.cpp',
        'RSDKv3/Audio.cpp',
        'RSDKv3/Collision.cpp',
        'RSDKv3/Debug.cpp',
        'RSDKv3/Drawing.cpp',
        'RSDKv3/Ini.cpp',
        'RSDKv3/Input.cpp',
        'RSDKv3/main.cpp',
        'RSDKv3/ModAPI.cpp',
        'RSDKv3/Math.cpp',
        'RSDKv3/Object.cpp',
        'RSDKv3/Palette.cpp',
        'RSDKv3/Player.cpp',
        'RSDKv3/Reader.cpp',
        'RSDKv3/RetroEngine.cpp',
        'RSDKv3/Scene.cpp',
        'RSDKv3/Scene3D.cpp',
        'RSDKv3/Script.cpp',
        'RSDKv3/Sprite.cpp',
        'RSDKv3/String.cpp',
        'RSDKv3/Text.cpp',
        'RSDKv3/Userdata.cpp',
        'RSDKv3/Video.cpp',
    ),
    include_directories: include_directories(
        'dependencies/all/theoraplay',
        'dependencies/all/tinyxml2',
    ),
    dependencies: [
        dependency('sdl2'),
        dependency('glew'),
        dependency('vorbis'),
        dependency('vorbisfile'),
        dependency('theoradec'),
        dependency('threads'),
    ],
)
